# ssdsync

./: .gitignore  Cargo.toml  README.md  test.sh
src/: main.rs
