[package]
name = "ssdsync"
version = "0.1.2"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0", features = ["derive"] }
indicatif = "0.17"
nix = "0.25"
tokio = { version = "1.21", features = ["full"] }

[profile.release]
strip = true
codegen-units = 1
panic = "abort"
lto = true
