[package]
name = "ssdsync"
version = "0.1.3"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1", features = ["derive"] }
indicatif = "0.17"
nix = "0.26"
tokio = { version = "1.25", features = ["full"] }

[profile.release]
strip = true
codegen-units = 1
panic = "abort"
lto = true
