[package]
name = "ssdsync"
version = "0.1.4"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.6", features = ["derive"] }
indicatif = "0.18"
nix = { version = "0.31", features = ["ioctl"] }
tokio = { version = "1.52", features = ["full"] }

[profile.release]
strip = true
codegen-units = 1
panic = "abort"
lto = true
